<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">hw9search</string>
    <string name="hello_world">Hello world!</string>
      <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="street_address">Street Address*:</string>
    <string name="city">City*:</string>
    <string name="state">State*:</string>
    <string name="search">Search</string>
    <string name="desc">Zillowimagelogo</string>
    <string name="error">This Field is required</string>

    <string-array name="states">
        <item>Select State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>GU</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>MP</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>PR</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>VI</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
<string name="action_settings">Action Settings</string>
    <string name="title_activity_result">Results</string>
    <string name="title_activity_post">Post</string>
    <string name="Null"> </string>
    <string name="facebook_app_id">1565755123639965</string>

</resources>
